# maida

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.agents/skills/commit-stack-review/: SKILL.md
.agents/skills/split-pr-stack/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: lint-format.yml  runapp.yml  statistical-burn-in.yml  unittest-fast.yml
docs/: architecture.md  cli.md  getting-started.md  guardrails.md  index.md  integrations.md  regression-testing.md  sdk.md  viewer.md
docs/reference/: config.md  policy.md  trace-format.md
examples/crewai/: minimal.py
examples/demo/: pure_python.py
examples/langchain/: pyproject.toml
examples/openai_agents/: minimal.py
maida/: __init__.py  acceptance.py  assertions.py  baseline.py  burn_in.py  cli.py  config.py  constants.py  diff.py  events.py  exceptions.py  guardrails.py  loopdetect.py  policy.py  runner.py  scaffold.py  server.py  statistics.py  storage.py  tracing.py
maida/_tracing/: _context.py  _lifecycle.py  _otel.py  _recorders.py
maida/demo/: __init__.py  _agents.py
maida/integrations/: CONTRIBUTING.md  crewai.py  langchain.py  openai_agents.py
maida/ui_static/: app.js  index.html
schemas/: event.schema.json  run.schema.json  statistical-gate-report.schema.json
scripts/: statistical_burn_in.py
tests/: conftest.py  test_assertions.py  test_baseline.py  test_burn_in.py  test_cli.py  test_diff.py  test_docs.py  test_events.py  test_exceptions.py  test_golden_traces.py  test_guardrails.py  test_implicit_run.py  test_import_placement.py  test_legacy_compat.py  test_loopdetect.py  test_policy.py  test_policy_tolerance_nondeterminism.py  test_redaction.py  test_runner.py  test_server.py  test_server_path_traversal.py  test_statistics.py  test_storage.py
tests/fixtures/traces/current/guardrail/: README.md  meta.json  spans.jsonl
tests/fixtures/traces/current/latency-cost-envelope/: README.md  meta.json  spans.jsonl
tests/fixtures/traces/current/loop/: README.md  meta.json  spans.jsonl
tests/fixtures/traces/current/missing-terminal-state/: README.md  meta.json  spans.jsonl
tests/integrations/: test_crewai_integration.py  test_imports.py  test_integration_run_lifecycle.py  test_langchain_integration.py  test_openai_integration.py
tests/tracing/: test_tracing.py
(+17 files in other folders)
