[project]
name = "maida-ai"
dynamic = ["version"]
description = "Don't let broken agent changes merge."
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [
    { name = "z-a-f", email = "zafar@maida.ai" },
    { name = "crowell", email = "jeff@maida.ai" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.135.0,<0.136.0",
    "pyyaml>=6.0.3,<6.1.0",
    "typer>=0.23.0,<0.24.0",
    "uvicorn>=0.41.0,<0.42.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Quality Assurance",

  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/maida-ai/maida"

[project.scripts]
maida = "maida.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.1",
]

[project.optional-dependencies]
langchain = ["langchain>=1.2.10"]
crewai = [
  "crewai[tools]>=1.6.1",  # Latest crewai has compatibility issues with other integrations
  "onnxruntime>=1.22.1,<1.23.0; python_version<='3.10'",
  "onnxruntime>=1.23.0; python_version>='3.11' and python_version<'3.14'",
]
openai = [
    "openai-agents>=0.12.2",
]

[build-system]
# Wheel/sdist include maida/ (and thus maida/ui_static/) by default.
# Do not add only-include or only-packages that would exclude ui_static.
requires = ["hatchling>=1.28.0,<1.29.0", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maida"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"

[tool.hatch.build.hooks.version]
path = "maida/_version.py"
template = '''
# This file is managed by dynamic versioning. Do not edit manually.
version = "{version}"'''

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_hooks/readme_links_rewrite.py"
